Fixes: NB#272617 - Input field of custom navigation bar is improperly aligned under development theme. RevBy: Miguel Gomez, Adrian Yanes

--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -23,6 +23,10 @@
     release-feedback: ;
 }
 
+#myNavBarContent {
+    margin-top: 2px;
+}
+
 #ageSlider {
     minimum-feedback-interval: 40;
 }
